force-app/main/default/objects/AIG_BusinessRule__c/AIG_BusinessRule__c.object-meta.xml
<CustomObject>
    <description>Custom Assignment Rules for Lead, Contact and Opportunity</description>
    <label>Business Rule</label>
    <nameField>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Rule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>