force-app/main/default/objects/AIG_BusinessRule__c/fields/AIG_AssignOwner__c.field-meta.xml
<CustomField>
    <fullName>AIG_AssignOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner for the State</description>
    <label>Assign Owner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Inactive users and chatter users can not be added</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>notContain</operation>
            <value>Chatter</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>AIG_BusinessRuleOwner</relationshipName>
    <type>Lookup</type>
</CustomField>