force-app/main/default/objects/AIG_BusinessRule__c/fields/AIG_External_Id__c.field-meta.xml
<CustomField>
    <fullName>AIG_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>