force-app/main/default/objects/AIG_BusinessRule__c/fields/AIG_IsActive__c.field-meta.xml
<CustomField>
    <fullName>AIG_IsActive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is rule Active ?</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>