force-app/main/default/objects/AIG_BusinessRule__c/fields/AIG_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>AIG_Record_Type__c</fullName>
    <description>Record type for state owner</description>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plan Sponsor</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor Prospect</fullName>
            </value>
            <value>
                <fullName>Onboarded Plan Sponsor</fullName>
            </value>
            <value>
                <fullName>Plan Consultant Firm</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor Contact</fullName>
            </value>
            <value>
                <fullName>Plan Consultant Contact</fullName>
            </value>
            <value>
                <fullName>Plan Sponsor Opportunity</fullName>
            </value>
            <value>
                <fullName>Participant Opportunity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>