force-app/main/default/objects/AIG_BusinessRule__c/fields/AIG_Type__c.field-meta.xml
<CustomField>
    <fullName>AIG_Type__c</fullName>
    <description>This will tell what for what type of user is the business rule record created?</description>
    <inlineHelpText>Type of user</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDC User</fullName>
            </value>
            <value>
                <fullName>Bid Unit Analyst</fullName>
            </value>
            <value>
                <fullName>Consultant Relations User</fullName>
            </value>
            <value>
                <fullName>Deal Management</fullName>
            </value>
            <value>
                <fullName>Pricing Analyst</fullName>
            </value>
            <value>
                <fullName>VPBD User</fullName>
            </value>
            <value>
                <fullName>ERM User</fullName>
                <label>Managing ERM User</label>
            </value>
            <value>
                <fullName>Milestone Pricing User</fullName>
            </value>
            <value>
                <fullName>Milestone Proposal User</fullName>
            </value>
            <value>
                <fullName>Bid Manager</fullName>
            </value>
            <value>
                <fullName>Pricing Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>