force-app/main/default/objects/AIG_BusinessRule__c/validationRules/AIG_AssignOwner_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>AIG_AssignOwner_Is_Mandatory</fullName>
    <active>true</active>
    <description>Assign Owner and Type are mandatory</description>
    <errorConditionFormula>OR(
ISBLANK( AIG_AssignOwner__c ),
ISBLANK(Text(AIG_Type__c))
)</errorConditionFormula>
    <errorMessage>Assign Owner and Type are mandatory</errorMessage>
</ValidationRule>