force-app/main/default/objects/AIG_BusinessRule__c/listViews/AIG_CR_Business_Rules.listView-meta.xml
<ListView>
    <fullName>AIG_CR_Business_Rules</fullName>
    <columns>NAME</columns>
    <columns>AIG_State__c</columns>
    <columns>AIG_AssignOwner__c</columns>
    <columns>AIG_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AIG_Type__c</field>
        <operation>equals</operation>
        <value>Consultant Relations User</value>
    </filters>
    <label>CR Business Rules</label>
</ListView>