force-app/main/default/objects/AIG_BusinessRule__c/listViews/AIG_Managing_ERM.listView-meta.xml
<ListView>
    <fullName>AIG_Managing_ERM</fullName>
    <columns>NAME</columns>
    <columns>AIG_State__c</columns>
    <columns>AIG_AssignOwner__c</columns>
    <columns>AIG_IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AIG_Type__c</field>
        <operation>equals</operation>
        <value>ERM User</value>
    </filters>
    <label>Managing ERM Business Rules</label>
</ListView>