force-app/main/default/objects/AIG_BusinessRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AIG_AssignOwner__c</columns>
    <columns>AIG_State__c</columns>
    <columns>AIG_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>